--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Photos</string>
     <string name="photo_transition">photo_transition</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="Welcome">Welcome</string>
+    <string name="email_address">Email Address</string>
+    <string name="login">Login</string>
 </resources>
