--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="photo_transition">photo_transition</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="Welcome">Welcome</string>
+    <string name="welcome">Welcome!</string>
     <string name="email_address">Email Address</string>
-    <string name="login">Login</string>
+    <string name="sign_in">Sign In</string>
+    <string name="we_hope_you_enjoy_the_stay">We hope you enjoy the stay!</string>
 </resources>
