--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="we_hope_you_enjoy_the_stay">We hope you enjoy the stay!</string>
     <string name="photos">Photos</string>
     <string name="profile">Profile</string>
+    <string name="liked">Liked</string>
 </resources>
