--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="photos">Photos</string>
     <string name="profile">Profile</string>
     <string name="liked">Liked</string>
+    <string name="error_login_failed">Failed to login. Try later</string>
 </resources>
